TPS7/Theorie/autocell/parser.output
   0  $accept : %entry% $end

   1  program : INT DIMENSIONS OF config END opt_statements EOF

   2  config : INT DOT_DOT INT
   3         | fields

   4  fields : field
   5         | fields COMMA field

   6  field : ID OF INT DOT_DOT INT

   7  opt_statements :
   8                 | statement opt_statements

   9  statement : cell ASSIGN E
  10            | ID ASSIGN E

  11  cell : LBRACKET INT COMMA INT RBRACKET

  12  E : T
  13    | E PLUS T

  14  T : expression
  15    | T MULTI expression

  16  expression : cell
  17             | INT
  18             | ID
  19             | PARG E PARD

  20  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (20)

	INT  shift 3
	.  error

	program  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	program : INT . DIMENSIONS OF config END opt_statements EOF  (1)

	DIMENSIONS  shift 5
	.  error


state 4
	%entry% : '\001' program .  (20)

	.  reduce 20


state 5
	program : INT DIMENSIONS . OF config END opt_statements EOF  (1)

	OF  shift 6
	.  error


state 6
	program : INT DIMENSIONS OF . config END opt_statements EOF  (1)

	ID  shift 7
	INT  shift 8
	.  error

	config  goto 9
	fields  goto 10
	field  goto 11


state 7
	field : ID . OF INT DOT_DOT INT  (6)

	OF  shift 12
	.  error


state 8
	config : INT . DOT_DOT INT  (2)

	DOT_DOT  shift 13
	.  error


state 9
	program : INT DIMENSIONS OF config . END opt_statements EOF  (1)

	END  shift 14
	.  error


state 10
	config : fields .  (3)
	fields : fields . COMMA field  (5)

	COMMA  shift 15
	END  reduce 3


state 11
	fields : field .  (4)

	.  reduce 4


state 12
	field : ID OF . INT DOT_DOT INT  (6)

	INT  shift 16
	.  error


state 13
	config : INT DOT_DOT . INT  (2)

	INT  shift 17
	.  error


state 14
	program : INT DIMENSIONS OF config END . opt_statements EOF  (1)
	opt_statements : .  (7)

	LBRACKET  shift 18
	ID  shift 19
	EOF  reduce 7

	opt_statements  goto 20
	statement  goto 21
	cell  goto 22


state 15
	fields : fields COMMA . field  (5)

	ID  shift 7
	.  error

	field  goto 23


state 16
	field : ID OF INT . DOT_DOT INT  (6)

	DOT_DOT  shift 24
	.  error


state 17
	config : INT DOT_DOT INT .  (2)

	.  reduce 2


state 18
	cell : LBRACKET . INT COMMA INT RBRACKET  (11)

	INT  shift 25
	.  error


state 19
	statement : ID . ASSIGN E  (10)

	ASSIGN  shift 26
	.  error


state 20
	program : INT DIMENSIONS OF config END opt_statements . EOF  (1)

	EOF  shift 27
	.  error


state 21
	opt_statements : statement . opt_statements  (8)
	opt_statements : .  (7)

	LBRACKET  shift 18
	ID  shift 19
	EOF  reduce 7

	opt_statements  goto 28
	statement  goto 21
	cell  goto 22


state 22
	statement : cell . ASSIGN E  (9)

	ASSIGN  shift 29
	.  error


state 23
	fields : fields COMMA field .  (5)

	.  reduce 5


state 24
	field : ID OF INT DOT_DOT . INT  (6)

	INT  shift 30
	.  error


state 25
	cell : LBRACKET INT . COMMA INT RBRACKET  (11)

	COMMA  shift 31
	.  error


state 26
	statement : ID ASSIGN . E  (10)

	LBRACKET  shift 18
	PARG  shift 32
	ID  shift 33
	INT  shift 34
	.  error

	cell  goto 35
	E  goto 36
	T  goto 37
	expression  goto 38


state 27
	program : INT DIMENSIONS OF config END opt_statements EOF .  (1)

	.  reduce 1


state 28
	opt_statements : statement opt_statements .  (8)

	.  reduce 8


state 29
	statement : cell ASSIGN . E  (9)

	LBRACKET  shift 18
	PARG  shift 32
	ID  shift 33
	INT  shift 34
	.  error

	cell  goto 35
	E  goto 39
	T  goto 37
	expression  goto 38


state 30
	field : ID OF INT DOT_DOT INT .  (6)

	.  reduce 6


state 31
	cell : LBRACKET INT COMMA . INT RBRACKET  (11)

	INT  shift 40
	.  error


state 32
	expression : PARG . E PARD  (19)

	LBRACKET  shift 18
	PARG  shift 32
	ID  shift 33
	INT  shift 34
	.  error

	cell  goto 35
	E  goto 41
	T  goto 37
	expression  goto 38


state 33
	expression : ID .  (18)

	.  reduce 18


state 34
	expression : INT .  (17)

	.  reduce 17


state 35
	expression : cell .  (16)

	.  reduce 16


state 36
	statement : ID ASSIGN E .  (10)
	E : E . PLUS T  (13)

	PLUS  shift 42
	EOF  reduce 10
	LBRACKET  reduce 10
	ID  reduce 10


state 37
	E : T .  (12)
	T : T . MULTI expression  (15)

	MULTI  shift 43
	EOF  reduce 12
	LBRACKET  reduce 12
	PLUS  reduce 12
	PARD  reduce 12
	ID  reduce 12


state 38
	T : expression .  (14)

	.  reduce 14


state 39
	statement : cell ASSIGN E .  (9)
	E : E . PLUS T  (13)

	PLUS  shift 42
	EOF  reduce 9
	LBRACKET  reduce 9
	ID  reduce 9


state 40
	cell : LBRACKET INT COMMA INT . RBRACKET  (11)

	RBRACKET  shift 44
	.  error


state 41
	E : E . PLUS T  (13)
	expression : PARG E . PARD  (19)

	PLUS  shift 42
	PARD  shift 45
	.  error


state 42
	E : E PLUS . T  (13)

	LBRACKET  shift 18
	PARG  shift 32
	ID  shift 33
	INT  shift 34
	.  error

	cell  goto 35
	T  goto 46
	expression  goto 38


state 43
	T : T MULTI . expression  (15)

	LBRACKET  shift 18
	PARG  shift 32
	ID  shift 33
	INT  shift 34
	.  error

	cell  goto 35
	expression  goto 47


state 44
	cell : LBRACKET INT COMMA INT RBRACKET .  (11)

	.  reduce 11


state 45
	expression : PARG E PARD .  (19)

	.  reduce 19


state 46
	E : E PLUS T .  (13)
	T : T . MULTI expression  (15)

	MULTI  shift 43
	EOF  reduce 13
	LBRACKET  reduce 13
	PLUS  reduce 13
	PARD  reduce 13
	ID  reduce 13


state 47
	T : T MULTI expression .  (15)

	.  reduce 15


22 terminals, 12 nonterminals
21 grammar rules, 48 states
